# Podcast-Classification-Model

./: .dockerignore  .env.local  .gitignore  README.md  add_samples.py  main.py  pyproject.toml
.dvc/: config
.github/workflows/: docker-image.yml
data/annotated/: .gitignore  podcasts_annotated.csv  podcasts_annotated.csv.dvc
data/augmented/: podcasts_keywords_augmented.csv
data/interim/: podcasts_keywords_clean.csv
data/raw/: podcasts_without_transc.json
docker/: Dockerfile  docker-compose.yaml  podcast-classifier  podcast.classifier
models/: model_metadata_20251214_155755.txt
notebooks/: 01_data_exploration.ipynb  02_annotation.ipynb  02_baseline_models.ipynb  03_data_exploration.ipynb  04_baseline_models.ipynb  04_model_evaluation.ipynb  05_hyperparameter_tuning.ipynb  05_model_registry.ipynb  06_model_evaluation.ipynb  07_model_registry.ipynb  08_model_validation.ipynb  baseline_models.ipynb  data_preparation.ipynb
results/models/: best_model_20251214_155755.pkl
src/: classify_podcast.py  main.py  utils.py
src/config/: loader.py  mlflow.py  model.py  model_config.py
src/evaluation/: evaluate.py  register.py
src/loader/: loader.py
src/train/: train.py
src/training/: baseline.py  tuning.py
src/utils/: logger.py  mlflow.py
test/: test_production_model.py
