[project]
name = "podcast-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc>=3.64.2",
    "matplotlib>=3.10.8",
    "mlflow>=3.7.0",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "deepchecks==0.19.1",
    "scikit-learn==1.2.2"
]
